--- a/src/EventPi.SignalProcessing.Ui/SignalCanvas.razor
+++ b/src/EventPi.SignalProcessing.Ui/SignalCanvas.razor
@@ -2,6 +2,7 @@
 @using EventPi.SignalProcessing
 @using ModelingEvolution.VideoStreaming.Buffers
 @using SkiaSharp
+@using SkiaSharp.Views.Blazor
 @inject NavigationManager nm
 @inject SignalHubClient _client
 <h3>SignalCanvas</h3>
