--- a/src/EventPi.SignalProcessing.Ui/SignalListControl.razor
+++ b/src/EventPi.SignalProcessing.Ui/SignalListControl.razor
@@ -13,6 +13,7 @@
                 <th>Name</th>
                 <th>Type</th>
                 <th>Scale</th>
+                <th>Color</th>
             </tr>
             </thead>
             <tbody>
@@ -26,6 +27,14 @@
                     @if (settings != null)
                     {
                         <input type="number" @bind="@settings.Factor" />
+                    }
+                </td>
+                <td>
+                    @if (settings != null)
+                    {
+                        <div style="color:@settings.CssColor">
+                        ▮▮▮▮▮
+                        </div>
                     }
                 </td>
             </tr>
